# ChangeLog for kde-misc/kcm_touchpad
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  kcm_touchpad-9999.ebuild:
  fix homepage

  17 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +kcm_touchpad-9999.ebuild, +metadata.xml:
  initial commit
