@@ -1,3 +1,5 @@
+DIST mishaaq-kcm_touchpad-2bb4e58.tar.gz 22341 RMD160 dff8764f4e23eb15c8fde17e88075b21474b3695 SHA1 27ae57a3ab8ec0ef96a879bdcd79c41d6dbf56fe SHA256 1944b64036d0719220fd9f91a31537f02b107f31cbc57417f6d2e43b8363625a
+EBUILD kcm_touchpad-0.2.1.ebuild 566 RMD160 205aed1451891e542cdfddadc5f40c68f9d7c35e SHA1 b95ff25623ae7c191a4c225333b7adbb56066b8a SHA256 35eaca1a32d4bc5fa3fde9f40c151b989f767e93eeeaaa68b2ba23277c72bebd
 EBUILD kcm_touchpad-9999.ebuild 506 RMD160 f3e58a8d8e8c1cf86c40ebdaf5059dfefe5c2157 SHA1 af45341af580e9a779f3ab3eb4ff297f989404ad SHA256 1faccfc8e75f1892280511493fba7e1a4bea028dd78efc7fec277b1bf20a3f66
-MISC ChangeLog 334 RMD160 1febf7a4e038fed2d957267002151177a81ccf6b SHA1 7e8d21da0f67629134d5d1b499862cb0f8c0f282 SHA256 99361fa1a5ff230a84e6ede2bb00caff17ad859cdaf9451cfa2a9ea3057ffec3
+MISC ChangeLog 443 RMD160 4ef98df4e7a4462ecd2d2e25664f4bf3ef68cfe1 SHA1 c1173a9cfe667367335d721774c0692e6a1e8701 SHA256 898338b65b5a4423747590e3bd1d46a5ae5df0d7609a3f8e7d268154dc1114d7
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
