@@ -3,6 +3,10 @@
 # $Header: $
 
   19 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +kcm_touchpad-0.2.1.ebuild:
+  add 021 version ebuild
+
+  19 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   kcm_touchpad-9999.ebuild:
   fix homepage
 
